--- a/odin-recipes/landing-page/index.html
+++ b/odin-recipes/landing-page/index.html
@@ -2,6 +2,10 @@
 <html>
     <head>
         <title>Landing Page</title>
+        <link rel="stylesheet" type="text/css" href="landing.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     </head>
     <body>
         <div class="container">
@@ -14,40 +18,60 @@
                 </ul>
             </div>
             <div class="hero">
-                <h1>This website is awesome</h1>
-                <p>This website has some subtext that goes here under the main title.</p>
-                <button>Sign Up</button>
-                <img src="https://images.unsplash.com/photo-1714139797690-969497e4a65e?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHwyfHx8ZW58MHx8fHx8">
+                <div>
+                    <h1>This website is awesome</h1>
+                    <p>This website has some subtext that goes here under the main title.</p>
+                    <button>Sign Up</button>
+                </div>
+                <img src="https://picsum.photos/id/14/500/280">
             </div>
-            <div class="carousel">
-                <h2>Some random information.</h2>
-                <ul>
-                    <li>
-                        <img src="">
-                        <p>this is some subtext under an illustration or image</p>
-                    </li>
-                    <li>
-                        <img src="">
-                        <p>this is some subtext under an illustration or image</p>
-                    </li>
-                    <li>
-                        <img src="">
-                        <p>this is some subtext under an illustration or image</p>
-                    </li>
-                    <li>
-                        <img src="">
-                        <p>this is some subtext under an illustration or image</p>
-                    </li>
-                </ul>
+            <div class="carousel-container">
+                <div class="carousel">
+                    <h2>Some random information.</h2>
+                    <ul>
+                        <li>
+                            <div>
+                                <img src="https://picsum.photos/id/11/120">
+                                <p>this is some subtext under an illustration or image</p>
+                            </div>
+                        </li>
+                        <li>
+                            <div>
+                                <img src="https://picsum.photos/id/11/120">
+                                <p>this is some subtext under an illustration or image</p>
+                            </div>
+                        </li>
+                        <li>
+                            <div>
+                                <img src="https://picsum.photos/id/11/120">
+                                <p>this is some subtext under an illustration or image</p>
+                            </div>
+                        </li>
+                        <li>
+                            <div>
+                                <img src="https://picsum.photos/id/11/120">
+                                <p>this is some subtext under an illustration or image</p>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
             </div>
-            <div class="testemonial">
-                <p>This is an inspiring quote, or a testemonial from a customer.  Maybe it's just filling up space, or maybe people will actually read it.  Who knows?  All I know is that it looks nice.</p>
-                <p>Thor, God of Thunder</p>
+            <div class="testemonial-container">
+                <div class="testemonial">
+                    <p class="quote">This is an inspiring quote, or a testemonial from a customer.  Maybe it's just filling up space, or maybe people will actually read it.  Who knows?  All I know is that it looks nice.</p>
+                    <p class="author"> - Thor, God of Thunder</p>
+                </div>
             </div>
-            <div class="cta">
-                <h3>Call to action! It's time!</h3>
-                <p>Sign up for our product by clicking that button right over there!</p>
-                <button>Sign Up</button>
+            <div class="cta-container">
+                <div class="cta">
+                    <div class="cta-inset">
+                        <div>
+                            <h3>Call to action! It's time!</h3>
+                            <p>Sign up for our product by clicking that button right over there!</p>
+                        </div>
+                        <button>Sign Up</button>
+                    </div>
+                </div>
             </div>
             <div class="footer">
                 <p>Copyright (c) The Odin Project</p>
