--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <h1>Project List</h1>
         <ul>
             <li><a href="odin-recipes/index.html">Recipes</a></li>
+            <li><a href="landing-page/index.html">Landing Page</a></li>
         </ul>
     </body>
 </html>
