added rock paper scissors game

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <ul>
             <li><a href="odin-recipes/index.html">Recipes</a></li>
             <li><a href="landing-page/index.html">Landing Page</a></li>
+            <li><a href="rock-paper-scissors/index.html">Rock Paper Scissors</a></li>
         </ul>
     </body>
 </html>
